--- a/.gitignore
+++ b/.gitignore
@@ -52,5 +52,7 @@ pids
 *.seed
 *.pid.lock
 
+# Node Modules
+/node_modules
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
